--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>Waiters Web-app</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="public/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-
-</head>
-
 <body>
-    <div class="container">
+
         <div class="row">
             <div class="col-12-md">
                 <h2>Waiter Web</h2>
@@ -22,7 +12,7 @@
          <div class="row">
             <div class="col-12-md input">
                 {{#each displayDays}}
-                <input type="checkbox" aria-label="Checkbox for following text input">{{days_of_week}}</input>
+                <input type="checkbox" value="{{id}}" aria-label="Checkbox for following text input">{{days_of_week}}</input>
                 {{/each}}
             </div>
         </div>
@@ -33,7 +23,6 @@
        
 
 
-    </div>
 
 
 
