--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
          <div class="row">
             <div class="col-12-md input">
                 {{#each displayDays}}
-                <input type="checkbox" value="{{id}}" aria-label="Checkbox for following text input">{{days_of_week}}</input>
+                <input type="checkbox" value="{{id}}" aria-label="Checkbox for following text input" name = 'dayName'>{{days_of_week}}</input>
                 {{/each}}
             </div>
         </div>
