--- a/views/shifts.handlebars
+++ b/views/shifts.handlebars
@@ -15,7 +15,8 @@
                     {{#each displayDays}}
 
                     <td>
-                        <tr>{{days_of_week}}</tr>
+                        <th>{{days_of_week}}</th>
+                        <tr>{{waiter_name}}</tr>
                     </td>
                     {{/each}}
 
