checked boxes remain checked with handlebars templating

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
          <div class="row">
             <div class="col-12-md input">
                 {{#each displayDays}}
-                <input type="checkbox"  aria-label="Checkbox for following text input" name = 'dayName' value="{{days_of_week}}">{{days_of_week}} </input>
+                <input type="checkbox"  aria-label="Checkbox for following text input" name = 'dayName' {{checked}} value="{{days_of_week}}">{{days_of_week}} </input>
                 {{/each}}
             </div>
         </div>
