--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,20 @@
-.container{
+/* .container{
     width: 100%;
     height: 100%;
+} */
+
+td {
+    vertical-align: top;
 }
+.waiter-list {
+    list-style: none;
+    padding : 0;
+    margin: 0;
+    vertical-align: top;
+}
+
+.waiter-list li {
+    margin: 0.2em;
+    padding: 0.2em;
+}
+
