--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,3 @@
-/* .container{
-    width: 100%;
-    height: 100%;
-} */
-
 td {
     vertical-align: top;
 }
@@ -17,4 +12,60 @@ td {
     margin: 0.2em;
     padding: 0.2em;
 }
+.my-legend .legend-title {
+    text-align: left;
+    margin-bottom: 8px;
+    font-weight: bold;
+    font-size: 90%;
+    }
+  .my-legend .legend-scale ul {
+    margin: 0;
+    padding: 0;
+    float: left;
+    list-style: none;
+    }
+  .my-legend .legend-scale ul li {
+    display: block;
+    float: left;
+    width: 50px;
+    margin-bottom: 6px;
+    text-align: center;
+    font-size: 80%;
+    list-style: none;
+    }
+  .my-legend ul.legend-labels li span {
+    display: block;
+    float: left;
+    height: 15px;
+    width: 50px;
+    }
+  .my-legend .legend-source {
+    font-size: 70%;
+    color: #999;
+    clear: both;
+    }
+  .my-legend a {
+    color: #777;    
+  }
+  .enough{
+      background-color: #20C300;
+  }
 
+  .not-enough{
+      background-color: #FF9A00;
+  }
+  .too-many{
+      background-color: #FF3300;
+  }
+  .no-waiters{
+      background-color: #959595;
+  }
+  .table{
+      text-transform: capitalize;
+  }
+  .successfully{
+      color: #20C300;
+  }
+  .delete{
+      color: red;
+  }
