test standardized and text added above text box

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -5,11 +5,13 @@
 
     <div class="row">
         <div class="col-12-md">
-            <h2>Waiter Web</h2>
+            <h2>Waiter Web App</h2>
         </div>
     </div>
+    <br>
     <div class="row">
         <div class="col-12-md input">
+            <h5>Please enter a waiters name</h5>
            <form action="/waiters" >
           <input type="text" name="user">
           <button type="submit">Add</button>
