--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,32 +2,38 @@
 <html>
 
 <body>
-
-    <div class="row">
-        <div class="col-12-md">
-            <h2>Waiter Web</h2>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-10-md">
-            <div class="successfully">
-                <span class="successfully">{{messages.successfully}}</span>
+    <br>
+    <div class="waiter-home">
+        <br>
+        <div class="row justify-content-md-center">
+            <div class="col-12-md">
+                <h2>Waiter Web</h2>
             </div>
         </div>
-    </div>
 
-    <form action="/waiters/{{user}}" method='post'>
-        <div class="row">
-            <div class="col-12-md input">
-                {{#each displayDays}}
-                <input type="checkbox" aria-label="Checkbox for following text input" name='dayName' {{checked}} value="{{days_of_week}}">{{days_of_week}}
-                </input>
-                {{/each}}
+        <div class="row justify-content-md-center">
+            <div class="col-10-md">
+                <div class="successfully">
+                    <span class="successfully">{{messages.successfully}}</span>
+                </div>
             </div>
         </div>
-        <button type="submit">Submit</button>
-    </form>
+
+        <form action="/waiters/{{user}}" method='post'>
+            <div class="row justify-content-md-center">
+                <div class="col-12-md input">
+                    {{#each displayDays}}
+                    <input class="dayCheck" type="checkbox" aria-label="Checkbox for following text input" name='dayName'
+                        {{checked}} value="{{days_of_week}}"></input>
+                    <label for="dayName">{{days_of_week}}</label>
+                    {{/each}}
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+            <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
 
 
 
