--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-
-    <div class="row">
-        <div class="col-12-md">
-            <h2>Waiter Web App</h2>
-        </div>
+<br>
+<br>
+<br>
+<div class="color justify-content-md-center">
+<div class="row justify-content-md-center" >
+    <div class="col-12-md">
+        <br>
+        <br>
+        <h2>Please login</h2>
+        <br>
     </div>
-    <br>
-    <div class="row">
-        <div class="col-12-md input">
-            <h5>Please enter a waiters name</h5>
-           <form action="/waiters" >
-          <input type="text" name="user">
-          <button type="submit">Add</button>
-          </form>
-        </div>
+</div>
+
+<div class="row justify-content-md-center">
+    <div class="col-12-md">
+        <form action="/waiters">
+            <input class="form-control mb-2 " type="text" name="user" placeholder="Please enter a waiters name">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        </form>
     </div>
-
-</body>
-
-
-</html>
+</div>
+</div>
