--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,9 +5,17 @@
     <br>
     <div class="waiter-home">
         <br>
+        <br>
         <div class="row justify-content-md-center">
             <div class="col-12-md">
                 <h2>Waiter Web</h2>
+            </div>
+        </div>
+         <div class="row justify-content-md-center">
+            <div class="col-10-md">
+                <div class="select">
+                    <span class="select">{{messages.select}}</span>
+                </div>
             </div>
         </div>
 
