--- a/views/shifts.handlebars
+++ b/views/shifts.handlebars
@@ -45,8 +45,8 @@
         </div>
         <div class="row justify-content-md-center">
             <div class="col-md-4">
-                <form action="/shifts" method="post">
-                    <button class="btn btn-danger btn-block" type="Submit"> Delete</button>
+                <form action="/days" method="post">
+                    <button class="btn btn-danger btn-block" type="Submit"> Clear</button>
                 </form>
             </div>
         </div>
